# DeepLom

./: CMakeLists.txt  main.cpp
CXX/Headers/: Glob.hpp  Learning.hpp  Mesh.hpp  ModelSettings.hpp
CXX/Sources/: Glob.cpp  Learning.cpp  Mesh.cpp  ModelSettings.cpp
CXX/include/: Glob.hpp  Learning.hpp  Mesh.hpp  Model.hpp  ModelSettings.hpp
CXX/src/: Glob.cpp  Learning.cpp  Mesh.cpp  Model.cpp  ModelSettings.cpp
MyLib/include/: Data.hpp  Glob.hpp  Learning.hpp  Mesh.hpp  Model.hpp  Test.hpp
MyLib/src/: Data.cpp  Learning.cpp  Mesh.cpp  Model.cpp  Test.cpp
